src/test/compile-fail/slice-mut.rs
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// Test mutability and slicing syntax.

fn main() {
    let x: &[isize] = &[1, 2, 3, 4, 5];
    // Immutable slices are not mutable.
    let y: &mut[_] = &x[2..4];
    //~^ ERROR mismatched types
    //~| expected `&mut [_]`
    //~| found `&_`
    //~| values differ in mutability
}
